RESOLVED FIXED284860
Some images on www.dandelionchocolate.com fail to load
https://bugs.webkit.org/show_bug.cgi?id=284860
Summary Some images on www.dandelionchocolate.com fail to load
Matt Woodrow
Reported 2024-12-17 17:36:50 PST
<rdar://141520514> This is a bad interaction between the 284780@main changes, and the old ‘simplified repaint’ optimisation. A style change that results in a compositing layer being created/destroyed previously wrote new ‘repaint rects’ onto the RenderLayer. There was a comment complaining about this, as computing repaint rects while layout was dirty was invalid. The new code in 284780@main just sets the dirty bit on the layer, so that we know to recompute repaint rects after the next layout. If that next layout ends up being a ‘simplified’ one, then the simplified repaint optimisations applied to the layer positions update and stop the repaint rects from being computed. The simplified repaint optimisation isn’t valid when dirty bits are set outside of the layout immediately preceding the layer position update.
Attachments
Matt Woodrow
Comment 1 2024-12-17 17:40:41 PST
EWS
Comment 2 2024-12-18 23:38:28 PST
Committed 288074@main (5dda919ecebd): <https://commits.webkit.org/288074@main> Reviewed commits have been landed. Closing PR #38117 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.